# slipscan

./: .env.example  .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO-FOLD-SHAPEPAY.md  TODO.md  eslint.config.js  firebase.json  go.mod  index.html  jsconfig.json  package-lock.json  package.json  render.yaml  tailwind.config.js  todo  todo.txt  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  firebase-hosting-merge.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  datadir.rs  dto.rs  lib.rs  main.rs  state.rs
backend/: .dev.vars.example  .dockerignore  .env.example  ARCHITECTURE.md  DEPLOY.md  Dockerfile  Makefile  README.md  capacity_analysis.py  config.toml  config.toml.example  deploy.sh  go.mod  go.sum  main.py  package.json  requirements.txt  test_connection.py  wrangler.toml
backend/docs/: EMAIL_SENDING.md
backend/migrations/: 0001_init_multi_tenant.down.sql  0001_init_multi_tenant.up.sql  0002_transactions.down.sql  0002_transactions.up.sql  0003_receipt_extras.down.sql  0003_receipt_extras.up.sql  20260430000001_foundation.sql  20260430000002_documents_chat.sql  20260430000003_accounting.sql  20260430000004_billing.sql  20260505000001_auth_tokens.sql  20260521000001_accounting_export.sql  20260521000002_audit_log_append_only.sql  20260521000003_bankfeed_provider_txn_id.sql  20260521000004_reconciliation_matches.sql  20260521000005_apitokens_seed_permissions.sql  20260526000001_email_outbox.sql  20260529000001_billing_model_picker.sql  20260529000002_org_avatar.sql  20260529000003_paystack_billing.sql  20260531000001_fix_default_extraction_model.sql
backend/scripts/: cloudflare-app-dns.sh  cloudflare-ses-dns.sh
backend/src/: bindings.ts  index.ts
backend/test/: apitokens.test.ts  bankfeed.test.ts  documents.test.ts  e2e.sh  email.test.ts  extract.test.ts  finance.test.ts  fx.test.ts  harness.ts  ledger.test.ts  orgs.test.ts  recon.test.ts  workspace.test.ts  xero.test.ts
crates/slipscan-cli/: Cargo.toml
crates/slipscan-cli/src/: extractor.rs  main.rs
crates/slipscan-core/: Cargo.toml
crates/slipscan-core/src/: csv.rs  datadir.rs  db.rs  domain.rs  error.rs  lib.rs  pay.rs  region.rs  secrets.rs  service.rs  slip.rs  util.rs  vat.rs
crates/slipscan-core/src/fx/: cache.rs  client.rs  mod.rs  money.rs
crates/slipscan-core/src/migrations/: 0001_init.sql  0100_accounting.sql  0101_ledger_hardening.sql  0200_vault.sql  0201_regenerable_sources.sql  0300_fx.sql  0301_region.sql  0400_shapepay.sql  0500_members.sql
crates/slipscan-core/src/repo/: account.rs  audit.rs  book.rs  budget.rs  category.rs  document.rs  ledger.rs  member.rs  mod.rs  pay.rs  recon.rs  report.rs  settings.rs  transaction.rs
crates/slipscan-core/src/secrets/: mod.rs  store.rs  string.rs  vault.rs
crates/slipscan-extract/: Cargo.toml
crates/slipscan-extract/src/: confidence.rs  currency.rs  fallback.rs  json_util.rs  keys.rs  lib.rs  prompt.rs  provider.rs  retry.rs  transport.rs  types.rs  validate.rs  wire.rs
crates/slipscan-extract/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/slipscan-ingest/: Cargo.toml
crates/slipscan-ingest/src/: b64.rs  fx.rs  http.rs  import.rs  lib.rs  pay.rs  state.rs  vault.rs  watch.rs
crates/slipscan-ingest/src/bank/: csv_statement.rs  mod.rs  presets.rs
crates/slipscan-ingest/src/email/: gmail.rs  graph.rs  imap.rs  mod.rs  oauth.rs  parse.rs
crates/slipscan-packs/: Cargo.toml
crates/slipscan-packs/src/: benchmark.rs  builtin.rs  compat.rs  engine.rs  error.rs  format.rs  hex.rs  install.rs  lib.rs  model.rs  trust.rs  verify.rs
crates/slipscan-packs/src/fixtures/: intl-starter.json  za-business-vat.json  za-personal.json
crates/slipscan-packs/tests/: pack_flow.rs
crates/slipscan-server/: Cargo.toml  README.md
crates/slipscan-server/src/: lib.rs  ops.rs  routes.rs  vault.rs
crates/slipscan-sync/: Cargo.toml
crates/slipscan-sync/src/: lib.rs
database/: migrate.go
database/migrations/: 20260319150000_initial.sql
docs/: API.md  ARCHITECTURE.md  BANK-ADAPTERS.md  CONFIGURATION.md  DEPLOY.md  DEPLOY_CLOUDFLARE.md  EMAIL.md  GETTING-STARTED.md  PACKS.md  PAYMENTS.md  README.md  SCREENSHOTS.md  SELFHOST.md  SETUP_CHECKLIST.md  features.md  getting-started.md  user-guide.md
frontend/: package-lock.json
frontend/src/: main.jsx
infra/cloudflare/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.email.toml  wrangler.toml
public/: _headers  robots.txt  sitemap.xml
roadmap/: PHASE1-CONTRACT.md  PHASE1-FRONTEND-CONTRACT.md  ROADMAP.md
shapepay-frontend/: .firebaserc  index.html  package-lock.json  package.json  vite.config.js
shapepay-frontend/src/: App.jsx  app.jsx  routes.jsx  theme.jsx
shapepay-frontend/supabase/: config.toml
shapepay-scraper-go/: go.mod  go.sum  main.go  run.go  scraper.go  supabase.go  utils.go
shapepay-supabase/supabase/: config.toml
site/: docs.html  index.html
site/docs/: api.md  architecture.md  bank-adapters.md  benchmarks.md  changelog.md  configuration.md  email.md  faq.md  getting-started.md  packs.md  roadmap.md  screenshots.md  selfhost.md  threat-model.md
slipscan-supabase/supabase/: config.toml
slipsnap-mono/: .gitignore  jsconfig.json  package-lock.json  package.json  vite.config.js
slipsnap-mono/.github/: workflow.yml
slipsnap-mono/src/: app.jsx
sql/: create_tables.sql  invites.sql  profiles.sql
src/: App.jsx  app.jsx  colours.txt  index.css  main.jsx  routes.jsx
src/components/: ChatPanel.jsx  CommandPalette.jsx  InvitationPrompt.jsx  PageHeader.jsx  Sidebar.jsx  StatusPill.jsx  UploadDialog.jsx  Wordmark.jsx  theme-provider.jsx
src/context/: auth-context.jsx  use-auth.js
supabase/: config.toml
worker/: package-lock.json  tsconfig.json  wrangler.toml
(+693 files in other folders)
