[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vulos/slipscan"
rust-version = "1.85"

[workspace.dependencies]
slipscan-core = { path = "crates/slipscan-core" }
slipscan-extract = { path = "crates/slipscan-extract" }
slipscan-ingest = { path = "crates/slipscan-ingest" }
slipscan-packs = { path = "crates/slipscan-packs" }
slipscan-server = { path = "crates/slipscan-server" }

anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
keyring = { version = "3", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v7", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
uninlined_format_args = "allow"
