[workspace]
resolver = "2"
members = ["crates/*"]
# slipscan-sync carries an optional dependency on envoir's `dmtap-sync` (see
# crates/slipscan-sync/Cargo.toml). Cargo resolves EVERY optional dependency's
# source into the lockfile for the whole workspace regardless of which
# features are active — verified empirically: even with the feature off and
# an already-committed Cargo.lock, a plain `cargo build` still shells out to
# update the envoir git remote and the crates.io index. `default-members`
# does not prevent this; only `exclude` does, because it removes the crate
# from workspace dependency resolution entirely. So slipscan-sync is excluded
# here to keep a bare `git clone && cargo build` of SlipScan free of any
# dependency on envoir. Build it on its own, with the mapping enabled, via:
#   cargo build --manifest-path crates/slipscan-sync/Cargo.toml --features sync-dmtap
exclude = ["crates/slipscan-sync"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vulos/slipscan"
rust-version = "1.85"

[workspace.dependencies]
slipscan-core = { path = "crates/slipscan-core" }
slipscan-extract = { path = "crates/slipscan-extract" }
slipscan-ingest = { path = "crates/slipscan-ingest" }
slipscan-packs = { path = "crates/slipscan-packs" }
slipscan-server = { path = "crates/slipscan-server" }
# slipscan-sync is intentionally NOT a workspace dependency here: it is
# excluded from the workspace (see [workspace].exclude above) so that a
# default build never touches envoir, and nothing else in SlipScan depends on
# it (grep-confirmed). Build it standalone; see that exclusion's comment.

anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
ed25519-dalek = "2"
keyring = { version = "3", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v7", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
uninlined_format_args = "allow"
