[package]
name = "slipscan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SlipScan command-line interface"

[[bin]]
name = "slipscan"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
slipscan-core = { workspace = true }
slipscan-server = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
