[package]
name = "slipscan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SlipScan domain model, SQLite storage, migrations, and core services"

[dependencies]
chacha20poly1305 = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Native OS keychain backends. keyring compiles to a mock store on platforms
# where no backend feature is enabled, so builds stay green everywhere.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[lints]
workspace = true
