[package]
name = "slipscan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SlipScan headless server (self-host mode): axum wrapper over core services"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
slipscan-core = { workspace = true }
slipscan-packs = { workspace = true }
thiserror = { workspace = true }
# `time` on top of the workspace set: the explicit FX fetch drives core's
# `?Send` future on a self-contained current-thread runtime whose timer must
# exist for transport timeouts.
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
# data_status route tests need real directories on disk.
tempfile = "3"
tower = { workspace = true }

[lints]
workspace = true
