[package]
name = "slipscan-desktop"
version = "0.1.0"
description = "slip/scan — self-hosted personal finance and accounting"
edition = "2021"
license = "MIT"

# Keep this crate out of the repo-root workspace for now; the integration
# step wires slipscan-core in later.
[workspace]

[lib]
name = "slipscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
