[package]
name = "slipscan-desktop"
version = "0.1.0"
description = "slip/scan — self-hosted personal finance and accounting"
edition = "2021"
license = "MIT"

# Kept out of the repo-root workspace (root members are crates/* only);
# slipscan-core is wired in as a plain path dependency.
[workspace]

[lib]
name = "slipscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slipscan-core = { path = "../../../crates/slipscan-core" }
base64 = "0.22"
sha2 = "0.10"
